# scenematica

./: CMakeLists.txt  README.md  changelog.md  readme.md  todo.md
scenematica/: CMakeLists.txt
scenematica-editor/: CMakeLists.txt
scenematica-editor/src/: EditorLayer.cpp  EditorLayer.h  ScenematicEditor.cpp
scenematica-editor/src/UI/: LevelEditor.cpp  LevelEditor.h  LevelList.cpp  LevelList.h  MainMenu.cpp  MainMenu.h  MenuBase.h
scenematica-editor/src/UI/Menus/: LevelEditor.cpp  LevelEditor.h  LevelList.cpp  MainMenu.cpp
scenematica-editor/src/UI/Panels/: ContentBrowser.cpp  ElementHierarchyPanel.cpp  ElementProperties.cpp
scenematica/src/: smpch.h
scenematica/src/scenematica/: asset_meta.cpp  asset_meta.h  elements.h  group.h  level.cpp  level.h  level_registry.h  material.h  types.h  version.h.in
scenematica/src/scenematica/core/: uuid.cpp
src/: scenematica.h  smpch.h
src/scenematica/: elements.h  level.h  level_registry.cpp  uuid.cpp  uuid.h
